need to fix slider animation and overflow

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -31,24 +31,7 @@ body::-webkit-scrollbar-thumb:hover {
   transition: all 0.4s ease-out;
 }
 
-.carousel-list-item {
-  background-size: cover;
-  background-position: center;
+#slider {
+  --slider-index: 0;
+  transform: translateX(calc(var(--slider-index) * -100%));
 }
-
-/*.slide[data-active = 'active'] {*/
-/*  opacity: 1;*/
-/*}*/
-
-/*.slider_button {*/
-/*  position: absolute;*/
-/*  z-index: 2;*/
-/*  border: none;*/
-/*  font-size: 4rem;*/
-/*  top: 50%;*/
-/*  transform: translateY(-50%);*/
-/*  cursor: pointer;*/
-/*  border-radius: 0.25rem;*/
-/*  padding: 0 0.5rem;*/
-/*  background: rgba(255, 255, 255, 0.1) none;*/
-/*}*/
